@@ -4,9 +4,9 @@ description: Saiba como executar uma atualização no local.
 topic-tags: upgrading
 feature: Upgrading
 exl-id: aef6ef00-993c-4252-b0ad-ddc4917beaf7
-source-git-commit: 6d2b7e341dcdedf3c000b9fb0ecd21722bdf2a27
+source-git-commit: c0574b50f3504a4792405d6fcd8aa3a2e8e6c686
 workflow-type: tm+mt
-source-wordcount: '1256'
+source-wordcount: '1244'
 ht-degree: 0%
 
 ---
@@ -116,8 +116,6 @@ Onde `<<YOUR_PROFILE>>` e `<<ADDITIONAL_FLAGS>>` são substituídos pelo perfil 
 
 * Se você estiver executando a atualização em um sistema Windows em que o mapeamento da memória Java não é manipulado corretamente, adicione o `--disable-mmap` para o comando.
 
-* Se você estiver usando o Java 7, adicione o `-XX:MaxPermSize=2048m` logo após a `-Xmx` parâmetro.
-
 Para obter instruções adicionais sobre como usar a ferramenta crx2oak, consulte Uso do [Ferramenta de migração CRX2Oak](/help/sites-deploying/using-crx2oak.md). O JAR auxiliar do crx2oak pode ser atualizado manualmente se necessário, substituindo-o manualmente por versões mais recentes após desempacotar o início rápido. Sua localização na pasta de instalação AEM é: `<aem-install>/crx-quickstart/opt/extensions/crx2oak.jar`. A versão mais recente da ferramenta de migração CRX2Oak está disponível para download no Repositório de Adobe em: [https://repo1.maven.org/maven2/com/adobe/granite/crx2oak/](https://repo1.maven.org/maven2/com/adobe/granite/crx2oak/)
 
 Se a migração tiver sido concluída com êxito, a ferramenta sairá com um código de saída zero. Além disso, verifique se há mensagens AVISO e ERRO na seção `upgrade.log` arquivo, localizado em `crx-quickstart/logs` no diretório de instalação AEM, pois isso poderia indicar erros não fatais que ocorreram durante a migração.
@@ -181,7 +179,7 @@ Observe que iniciar AEM a partir do script de início não iniciará a atualiza�
 1. Procure o processo de AEM. Será algo parecido com:
 
    ```shell
-   /usr/bin/java -server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar crx-quickstart/app/cq-quickstart-6.2.0-standalone-quickstart.jar start -c crx-quickstart -i launchpad -p 4502 -Dsling.properties=conf/sling.properties
+   /usr/bin/java -server -Xmx1024m -Djava.awt.headless=true -Dsling.run.modes=author,crx3,crx3tar -jar crx-quickstart/app/cq-quickstart-6.5.0-standalone-quickstart.jar start -c crx-quickstart -i launchpad -p 4502 -Dsling.properties=conf/sling.properties
    ```
 
 1. Modifique o comando substituindo o caminho para o jar existente ( `crx-quickstart/app/aem-quickstart*.jar` neste caso) com o novo jar que é um irmão da `crx-quickstart` pasta. Usando nosso comando anterior como exemplo, nosso comando seria:
